added version to the layout and fixed a routing error

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,11 @@
             = yield
     
       %footer
-        %p= t('.copy')
+        %p
+          = "Version: #{get_version}"
+          %i.icon-chevron-down
+          = t('.copy')
+
     /
       Javascripts
       \==================================================
