--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -28,6 +28,6 @@
           = link_to user_path(user), :method => :delete, :'data-original-title' => t('.delete'), :confirm => t('.delete_confirm') do
             %i.icon-remove
 
-= link_to users_new_path do
+= link_to new_user_path do
   %i.icon-plus-sign
   = t('.add')
