--- a/app/views/layouts/_bots.html.haml
+++ b/app/views/layouts/_bots.html.haml
@@ -16,7 +16,7 @@
   - if running_bots.count > 0 || paused_bots.count > 0
     %li.divider
   %li
-    = link_to '#' do
+    = link_to new_bot_path do
       = # TODO fix grafic bug on hover
       %i.icon-plus-sign
       = t('.add_bot')
