--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,6 @@
-%h1
-  = t('.headline')
-  %i= "#{@user.username}"
+.page-header
+  %h1
+    = t('.headline')
+    %small= "#{@user.username}"
 
 = render :partial => "form"
