--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,7 @@
       .content
         .row
           .span12
+            #ajax_flash
             = bootstrap_flash
             = yield
     
