--- a/app/views/bots/new.html.haml
+++ b/app/views/bots/new.html.haml
@@ -1,4 +1,6 @@
-.page-header
-  %h1= t('.headline')
+.row.inner
+  .span9
+    .page-header
+      %h1= t('.headline')
 
-= render :partial => "form", :locals => {:bot => @bot}
+    = render :partial => "form", :locals => {:bot => @bot}
