--- a/app/views/overview/index.html.haml
+++ b/app/views/overview/index.html.haml
@@ -1,4 +1,6 @@
-.page-header
-  %h1= t('.headline')
+.row.inner
+  .span9
+    .page-header
+      %h1= t('.headline')
 
-= render :partial => "index_content"
+    = render :partial => "index_content"
