--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,19 +1,8 @@
-= form_for @user do |f|
-  = f.label      :username
-  = f.text_field :username
+= simple_form_for @user, :html => { :class => 'form-horizontal' } do |f|
+  = f.input :username
+  = f.input :password
+  = f.input :password_confirmation
+  = f.input :email
 
-  = f.label          :password
-  = f.password_field :password
-
-  = f.label          :password_confirmation
-  = f.password_field :password_confirmation
-
-  = f.label       :email
-  = f.email_field :email
-
-  %label{:for => "user_admin", :class => "checkbox"}
-    = f.check_box :admin
-    = t('.admin')
-
-  = f.submit t('.save'), :class => "btn"
-
+  .form-actions
+    = f.submit t('.save'), :class => 'btn btn-primary'
