--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,34 +1,36 @@
-.page-header
-  %h1= t('.headline')
+.row.inner
+  .span9
+    .page-header
+      %h1= t('.headline')
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th= t('.id')
-      %th= t('.username')
-      %th= t('.role')
-      %th= t('.email')
-      %th= t('.actions')
+    %table.table.table-striped
+      %thead
+        %tr
+          %th= t('.id')
+          %th= t('.username')
+          %th= t('.role')
+          %th= t('.email')
+          %th= t('.actions')
 
-  %tbody
-    - @users.each do |user|
-      %tr.striped-hover
-        %td
-          - if user.admin?
-            %i.icon-star
-          - else
-            %i.icon-user
-          = user.id
-        %td= user.username
-        %td= user.role_name
-        %td= user.email
-        %td
-          = link_to edit_user_path(user), :rel => "tooltip", :'data-original-title' => t('.edit') do
-            %i.icon-edit
-          = raw('&nbsp;&nbsp;')
-          = link_to user_path(user), :id => "delete_#{user.id}", :method => :delete, :'data-original-title' => t('.delete'), :confirm => t('.delete_confirm') do
-            %i.icon-remove
+      %tbody
+        - @users.each do |user|
+          %tr.striped-hover
+            %td
+              - if user.admin?
+                %i.icon-star
+              - else
+                %i.icon-user
+              = user.id
+            %td= user.username
+            %td= user.role_name
+            %td= user.email
+            %td
+              = link_to edit_user_path(user), :rel => "tooltip", :'data-original-title' => t('.edit') do
+                %i.icon-edit
+              = raw('&nbsp;&nbsp;')
+              = link_to user_path(user), :id => "delete_#{user.id}", :method => :delete, :'data-original-title' => t('.delete'), :confirm => t('.delete_confirm') do
+                %i.icon-remove
 
-= link_to new_user_path do
-  %i.icon-plus-sign
-  = t('.add')
+    = link_to new_user_path do
+      %i.icon-plus-sign
+      = t('.add')
