--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,6 @@
-.page-header
-  %h1= t('.headline')
+.row.inner
+  .span9
+    .page-header
+      %h1= t('.headline')
 
-= render :partial => "form"
+    = render :partial => "form"
